--- a/segundo(1) (1).html
+++ b/segundo(1) (1).html
@@ -19,7 +19,7 @@
                 <a class="button2" href="historia.html" >Historia</a>
                 <a class="button3" href="hardware.html" >Hardware</a> 
                 <a class="button4" href="oque.html">Oque e?</a>
-                <a class="button5" href="oque.html">Onde e utilizado?</a>
+                <a class="button5" href="onde.html">Onde e utilizado?</a>
             <div class="social">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
